--- a/styles/style.css
+++ b/styles/style.css
@@ -32,6 +32,42 @@ ul {
   height: 10vh;
 }
 
+.contacts {
+  display: flex;
+  justify-content: space-between;
+  background-color: rgba(94, 94, 94, 0.8);
+  height: 4vh;
+  position: sticky;
+  top: 0;
+  border: 1px solid black;
+}
+
+.phone,
+.email {
+  position: relative;
+  color: rgb(0, 0, 0);
+  letter-spacing: 0.25px;
+  line-height: 25px;
+  padding-left: 25px;
+}
+.phone:before {
+  position: absolute;
+  left: 5px;
+  font-family: "icomoon";
+  content: "\f095";
+  color: #e41f29;
+  font-size: 30px;
+}
+
+.email:before {
+  position: absolute;
+  left: -8px;
+  font-family: "icomoon";
+  content: "\f003";
+  color: #e41f29;
+  font-size: 30px;
+}
+
 .nav {
   height: 100%;
   display: flex;
@@ -56,12 +92,13 @@ ul {
   justify-content: space-evenly;
   border: 1px solid black;
   margin-top: 2px;
-  height: 50vh;
+  height: 70vh;
 }
 
 .slider-one,
+.slider-three,
 .slider-two {
-  width: 50%;
+  width: 33.33%;
   height: 100%;
   border: 1px solid #000;
   margin: 2px;
@@ -74,10 +111,14 @@ ul {
   background-color: rgb(185, 72, 72);
 }
 
+.slider-three {
+  background-color: rgb(250, 109, 250);
+}
+
 .news {
   display: flex;
   width: 100%;
-  height: 20vh;
+  height: 25vh;
   border: 1px solid #000;
   margin-top: 2px;
 }
@@ -98,24 +139,22 @@ ul {
 .info {
   width: 100%;
   text-align: center;
-  height: 15vh;
+  height: 25vh;
   border: 1px solid #000;
   margin-top: 1px;
   background-color: coral;
 }
 
 .social {
-  position: fixed;
-  right: 125px;
-  bottom: 50px;
   border: 1px solid #000;
-  padding: 20px 40px;
   background-color: rgba(169, 172, 27, 0.493);
 }
 
 .footer {
+  display: flex;
+  justify-content: space-between;
   border: 1px solid #000;
-  height: 4vh;
+  height: 10vh;
   margin-top: 1px;
   background-color: dimgrey;
 }
